--- a/templates/new_question.html
+++ b/templates/new_question.html
@@ -1,18 +1,18 @@
 {% extends "chrome.html" %}
 
 {% block content %}
-<br>
-<div class="container">
+<div class="container-sm">
   <div class="jumbotron">
     <h1 class="display-4">New Question</h1>
     <p class="lead">Please use the following syntax to add your desired question type.  Questions added here can be later used to create tests.</p>
-    <hr class="my-4">
-    <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+    <hr class="my-2">
+    <p>Syntax explenation here</p>
   </div>
   <form method="POST">
       {{form.hidden_tag()}}
       <div class="form-group">
-        {{form.question_type.label}} {{form.question_type(class='form-control')}}
+        {{form.question_type.label}}
+        {{form.question_type(class='form-control')}}
       </div>
       <div class="form-group">
         {{form.question_text.label}}
