--- a/hktm/templates/index.html
+++ b/hktm/templates/index.html
@@ -10,8 +10,8 @@
     <p>You can use the menu to create questions or test, or the search at the top to jump directly to questions for a specific kanji</p>
 
     <div class="btn-group" role="group" aria-label="Quick Menu">
-      <a href="{{url_for('questions')}}" class="btn btn-primary">Questions</a>
-      <a href="{{url_for('tests')}}" class="btn btn-primary">Tests</a>
+      <a href="{{url_for('questions.list')}}" class="btn btn-primary">Questions</a>
+      <a href="{{url_for('tests.list')}}" class="btn btn-primary">Tests</a>
     </div>
   </div>
 </div>
