--- a/hktm/templates/chrome.html
+++ b/hktm/templates/chrome.html
@@ -22,10 +22,10 @@
             <a class="nav-link" href="{{ url_for('index') }}">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('questions') }}">Questions</a>
+            <a class="nav-link" href="{{ url_for('questions.list') }}">Questions</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('tests') }}">Tests</a>
+            <a class="nav-link" href="{{ url_for('tests.list') }}">Tests</a>
           </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
