--- a/hktm/questions/templates/questions/edit_question.html
+++ b/hktm/questions/templates/questions/edit_question.html
@@ -26,7 +26,7 @@
       </form>
       </div>
     <div class="col-4">
-      {{ question.render() }}
+      {{ question.render()|safe }}
     </div>
   </div>
 </div>
