--- a/hktm/static/questions.css
+++ b/hktm/static/questions.css
@@ -10,12 +10,30 @@
   display: grid;
   grid-template-columns: 95px 30px;
 }
+
+.kanji_writing{
+  line-height: 1em;
+  display: grid;
+  grid-template-columns: 95px 30px;
+  grid-template-rows: 95px;
+  verstical-align: top;
+}
+
 .hiragana{
   font-size: 70px;
   line-height: 1em;
   text-align: center;
   display: grid;
   grid-template-columns: 95px 30px;
+}
+
+.furigana{
+  font-size: 20px;
+  line-height: 1em;
+  text-align: center;
+   display: grid;
+   grid-template-rows: 20px auto 20px
+
 }
 
 .kanji_reading_brackets{
