--- a/hktm/static/questions.css
+++ b/hktm/static/questions.css
@@ -3,56 +3,88 @@
   font-style: normal;
   src: local("UD Digi Kyokasho NK-R")
 }
+@font-face {
+    font-family: 'Kyokasho';
+    src: url('/static/UDDigiKyokashoNP-R.woff2') format('woff2'),
+        url('/static/UDDigiKyokashoNP-R.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
 .preview{
   display: flex;
-  flex-direction: row-reverse;
-  font-size: 90px;
+  flex-direction: column-reverse;
+  font-size: 40px;
+  writing-mode: vertical-lr;
+  --colwidth: 70px;
+}
+.preview .hiragana{
+  padding-left: 7px;
+  Xletter-spacing: 0.3em;
+  display: grid;
+  grid-template-rows: var(--colwidth) 30px;
+}
+.preview .kanji_reading{
+  padding-left: 7px;
+  letter-spacing: 0.3em;
+}
+
+
+.preview .kanji_reading_brackets{
+    margin-left: -20px;
+}
+.preview img {
+   width: 80%;
+}
+
+.preview-frame{
+  border:none;
+  height: 700px;
 }
 
 .question{
-  font-family: hoshuko_kanji;
+  font-family: Kyokasho;
   display: flex;
-  flex-direction:column;
+  flex-direction: row;
   padding-left: 30px;
 }
 
 .kanji_reading{
   font-weight: bold;
-  line-height: 1em;
   display: grid;
-  grid-template-columns: 95px 30px;
+  grid-template-rows: var(--colwidth) 30px;
 }
 
 .kanji_writing{
-  line-height: 1em;
   display: grid;
-  grid-template-columns: 95px 30px;
+  grid-template-rows: var(--colwidth) 30px;
 }
 
 .combo_question{
   line-height: 1em;
   display: grid;
-  grid-template-columns: 95px 30px;
+  grid-template-rows: var(--colwidth) 30px;
+  white-space: nowrap;
 }
 
 .hiragana{
-  font-size: 70px;
+  font-size: 90%;
   text-align: center;
-  writing-mode: vertical-lr;
+  display: grid;
+  grid-template-rows: var(--colwidth) 30px;
+  white-space: nowrap;
 }
 
 .furigana{
   font-size: 20px;
   line-height: 1em;
   text-align: center;
-  writing-mode: vertical-lr
 }
 
 .furigana-combo{
   font-size: 20px;
   line-height: 1em;
   text-align: center;
-  writing-mode: vertical-lr;
   display:table;
 }
 
@@ -62,7 +94,7 @@
 
 .kanji_reading_brackets{
   display: grid;
-  grid-template-rows: 20px auto 20px
+  grid-template-columns: 20px auto 20px
 }
 .border{
   border: 1px solid black;
