--- a/hktm/lessons/templates/lessons/kanji_test_preview.html
+++ b/hktm/lessons/templates/lessons/kanji_test_preview.html
@@ -5,5 +5,5 @@
     <link rel="stylesheet" href="/static/questions.css"/>
   </head>
   <body>
-    {{ test.preview()|safe }}
+    {{ test.render()|safe }}
   </body>
