--- a/hktm/static/questions.css
+++ b/hktm/static/questions.css
@@ -11,6 +11,14 @@
     font-style: normal;
 }
 
+.page{
+  display: flex;
+  flex-direction: column-reverse;
+  font-size: 35px;
+  writing-mode: vertical-lr;
+  --colwidth: 60px;
+}
+
 .preview{
   display: flex;
   flex-direction: column-reverse;
@@ -46,7 +54,7 @@
   font-family: Kyokasho;
   display: flex;
   flex-direction: row;
-  padding-left: 30px;
+  padding-left: 15px;
 }
 
 .kanji_reading{
