--- a/hktm/lessons/templates/lessons/kanji_test_print.html
+++ b/hktm/lessons/templates/lessons/kanji_test_print.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="/static/questions.css"/>
   </head>
   <body>
-    <div class='page'>
+    <div class='page' style='float: right'>
       <div class='header'>
         <img src='/static/header.png' width='140px'>
       </div>
