--- a/hktm/static/questions.css
+++ b/hktm/static/questions.css
@@ -19,6 +19,11 @@
   --colwidth: 60px;
 }
 
+
+.preview-frame{
+  border:none;
+  height: 700px;
+}
 .preview{
   display: flex;
   flex-direction: column-reverse;
@@ -36,8 +41,6 @@
   padding-left: 7px;
   letter-spacing: 0.3em;
 }
-
-
 .preview .kanji_reading_brackets{
     margin-left: -20px;
 }
@@ -45,10 +48,8 @@
    width: 80%;
 }
 
-.preview-frame{
-  border:none;
-  height: 700px;
-}
+
+
 
 .question{
   font-family: Kyokasho;
@@ -62,11 +63,27 @@
   display: grid;
   grid-template-rows: var(--colwidth) 30px;
 }
+.kanji_reading_brackets{
+  display: grid;
+  grid-template-columns: 20px auto 20px
+}
+
+
 
 .kanji_writing{
   display: grid;
   grid-template-rows: var(--colwidth) 30px;
 }
+.kanji_box{
+  text-align: center;
+}
+.furigana{
+  font-size: 20px;
+  line-height: 1em;
+  text-align: center;
+}
+
+
 
 .combo_question{
   line-height: 1em;
@@ -74,21 +91,6 @@
   grid-template-rows: var(--colwidth) 30px;
   white-space: nowrap;
 }
-
-.hiragana{
-  font-size: 90%;
-  text-align: center;
-  display: grid;
-  grid-template-rows: var(--colwidth) 30px;
-  white-space: nowrap;
-}
-
-.furigana{
-  font-size: 20px;
-  line-height: 1em;
-  text-align: center;
-}
-
 .furigana-combo{
   font-size: 20px;
   line-height: 1em;
@@ -100,10 +102,13 @@
   display:table-cell;
 }
 
-.kanji_reading_brackets{
+
+
+
+.hiragana{
+  font-size: 90%;
+  text-align: center;
   display: grid;
-  grid-template-columns: 20px auto 20px
-}
-.border{
-  border: 1px solid black;
+  grid-template-rows: var(--colwidth) 30px;
+  white-space: nowrap;
 }
