--- a/hktm/lessons/templates/lessons/edit_lesson.html
+++ b/hktm/lessons/templates/lessons/edit_lesson.html
@@ -1,6 +1,34 @@
 {% extends "chrome.html" %}
 
 {% block content %}
+<script >
+$('#myModal').on('shown.bs.modal', function () {
+  $('#myInput').trigger('focus')
+})
+
+}
+</script>
+<div class="modal fade" id="confirmDelete" tabindex="-1" role="dialog" aria-labelledby="confirmDeleteLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="confirmDeleteLabel">Are you sure</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        Deleting this lesson will also delete the associated materials like tests and worksheets.
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">No</button>
+        <a href="{{url_for('lessons.delete', id=lesson_id)}}" class="btn btn-danger">Delete</a>
+      </div>
+    </div>
+  </div>
+</div>
+
+
 <div class="container-sm">
   <div class="jumbotron">
     <h1 class="display-4">Lesson Editor</h1>
@@ -32,6 +60,20 @@
         <div class='col-md'>
           {{form.submit(class='btn btn-primary')}}
         </div>
+        <div class='col-md'>
+          <div class="dropdown">
+            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Add Material
+            </button>
+            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+              <a class="dropdown-item" href="#">Kanji Test</a>
+              <a class="dropdown-item" href="#">Practice Sheet</a>
+              <a class="dropdown-item" href="#">Worksheet</a>
+            </div>
+          </div>        </div>
+        <div class='col-md'>
+          <button type="button" class="btn btn-danger float-right" data-toggle="modal" data-target="#confirmDelete">Delete</button>
+        </div>
       </div>
 </form>
       <div class="row">
@@ -43,4 +85,6 @@
       </div>
   </div>
 </div>
+
+
 {% endblock %}
