--- a/hktm/lessons/templates/lessons/edit_lesson.html
+++ b/hktm/lessons/templates/lessons/edit_lesson.html
@@ -66,9 +66,9 @@ $('#myModal').on('shown.bs.modal', function () {
               Add Material
             </button>
             <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-              <a class="dropdown-item" href="#">Kanji Test</a>
-              <a class="dropdown-item" href="#">Practice Sheet</a>
-              <a class="dropdown-item" href="#">Worksheet</a>
+              {% for t in content_types %}
+                <a class="dropdown-item" href="{{url_for('lesson_contents.add', lesson_id=lesson_id, content_code=t.code)}}">{{t.name}}</a>
+              {% endfor %}
             </div>
           </div>        </div>
         <div class='col-md'>
