framework for additional content added, and first content test done

--- a/hktm/lesson_contents/templates/lesson_contents/KJTS_content.html
+++ b/hktm/lesson_contents/templates/lesson_contents/KJTS_content.html
@@ -14,7 +14,7 @@ function print_preview(){
 </script>
 
   <div class="jumbotron">
-    <h1 class="display-4">New Kanji Test Content</h1>
+    <h1 class="display-4">Kanji Test Content</h1>
     <p class="lead">Please search and select the questions that will comprise this new lesson.</p>
     <hr class="my-2">
     Kanji Trest specific insturctions go here
