--- a/hktm/lesson_contents/templates/lesson_contents/KJWR_content.html
+++ b/hktm/lesson_contents/templates/lesson_contents/KJWR_content.html
@@ -14,7 +14,7 @@ function print_preview(){
 </script>
 
   <div class="jumbotron">
-    <h1 class="display-4">New Writing Practice Content</h1>
+    <h1 class="display-4">Writing Practice Content</h1>
     <p class="lead">Please search and select the questions that will comprise this new lesson.</p>
     <hr class="my-2">
     Writing Worksheet specific insturctions go here
