--- a/hktm/lesson_contents/templates/lesson_contents/print_container.html
+++ b/hktm/lesson_contents/templates/lesson_contents/print_container.html
@@ -12,7 +12,7 @@
             {{content.name}}
           </div>
           <div>
-            Name
+            なまえ
           </div>
         </div>
         <div class='header-instructions'>
