--- a/hktm/templates/chrome.html
+++ b/hktm/templates/chrome.html
@@ -23,10 +23,10 @@
             <a class="nav-link" href="{{ url_for('index') }}">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('lessons.list') }}">Lessons</a>
+            <a class="nav-link" href="{{ url_for('lessons.list') }}">単元</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Configuration</a>
+            <a class="nav-link disabled" href="#">構成</a>
           </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
