converted most strings to Japanese, sorted lesson list

--- a/hktm/lesson_contents/templates/lesson_contents/KJWR_content.html
+++ b/hktm/lesson_contents/templates/lesson_contents/KJWR_content.html
@@ -2,9 +2,11 @@
 {% block head %}
 
   <div class="jumbotron">
-    <h1 class="display-4">Writing Practice Content</h1>
-    <p class="lead">Please search and select the questions that will comprise this new lesson.</p>
+    <h1 class="display-4">漢字文章プリント編集</h1>
     <hr class="my-2">
-    Writing Worksheet specific insturctions go here
+    <p>
+    文章を書いたら、必要なマス目の数を入力してください。<br>
+    例）いけんをいう。｜７
+  </p>
   </div>
 {% endblock head%}
