--- a/hktm/lesson_contents/templates/lesson_contents/NWRD_content.html
+++ b/hktm/lesson_contents/templates/lesson_contents/NWRD_content.html
@@ -2,9 +2,11 @@
 {% block head %}
 
   <div class="jumbotron">
-    <h1 class="display-4">New Kanji Writing/Reading Practice Content</h1>
-    <p class="lead">Please search and select the questions that will comprise this new lesson.</p>
+    <h1 class="display-4">漢字読みプリント編集</h1>
     <hr class="my-2">
-    New Kanji Writing/Reading Worksheet specific insturctions go here
+    <p>
+    番号を振って、読みの問題を作成します。括弧内に漢字を入れてください。例）①　（竹　）やぶ
+    注意：括弧内はスペースで長さ調節可能
+  </p>
   </div>
 {% endblock head%}
