--- a/hktm/lesson_contents/templates/lesson_contents/TRCP_content.html
+++ b/hktm/lesson_contents/templates/lesson_contents/TRCP_content.html
@@ -2,9 +2,8 @@
 {% block head %}
 
   <div class="jumbotron">
-    <h1 class="display-4">New Tracing Practice Content</h1>
-    <p class="lead">Please search and select the questions that will comprise this new lesson.</p>
+    <h1 class="display-4">漢字なぞりプリント編集</h1>
     <hr class="my-2">
-    Tracing Practice specific insturctions go here
+    なぞり書きさせる漢字をスペースなしで記載してください。
   </div>
 {% endblock head%}
