--- a/hktm/lesson_contents/templates/lesson_contents/add_lesson_contents.html
+++ b/hktm/lesson_contents/templates/lesson_contents/add_lesson_contents.html
@@ -35,8 +35,8 @@ function print_preview(){
             {{form.submit(class='btn btn-primary')}}
           </div>
           <div class="col-xl-9">
-            <button type="button" class="btn btn-secondary float-right" onclick="print_preview();">Print View</button>
-            <button type="button" class="btn btn-secondary float-right mr-2" onclick="preview();">Preview</button>
+            <button type="button" class="btn btn-secondary float-right" onclick="print_preview();">プリントビュー</button>
+            <button type="button" class="btn btn-secondary float-right mr-2" onclick="preview();">プリビュー</button>
           </div>
         </div>
       </div>
