--- a/hktm/lessons/templates/lessons/list_lessons.html
+++ b/hktm/lessons/templates/lessons/list_lessons.html
@@ -3,10 +3,9 @@
 {% block content %}
 <div class="container-sm">
   <div class="jumbotron">
-    <h1 class="display-4">Saved Lessons</h1>
-    <p class="lead">You can review and manage saved lessons here.</p>
+    <h1 class="display-4">今まで作成した単元</h1>
     <hr class="my-2">
-    Please select a lesson from the list below
+    編集したい単元を選択してください。
   </div>
   <div class="list-group" role="tablist">
     {% for lesson in lessons %}
