--- a/hktm/lesson_contents/templates/lesson_contents/KJTS_content.html
+++ b/hktm/lesson_contents/templates/lesson_contents/KJTS_content.html
@@ -2,9 +2,13 @@
 {% block head %}
 
   <div class="jumbotron">
-    <h1 class="display-4">Kanji Test Content</h1>
-    <p class="lead">Please search and select the questions that will comprise this new lesson.</p>
+    <h1 class="display-4">漢字テスト編集</h1>
+
     <hr class="my-2">
-    Kanji Trest specific insturctions go here
+    <p>
+    漢字穴埋め問題は、「」を使う。例）「みなみ」<br>
+    読み仮名問題は、（）を使う。例）（音読）　注意：括弧内はスペースで長さ調節可能<br>
+    漢字とふりがな混合問題は、｛｝を使う。例）｛かく｝注意：括弧内はスペースで長さ調節可能
+  </p>
   </div>
 {% endblock head%}
