--- a/hktm/lesson_contents/templates/lesson_contents/preview_container.html
+++ b/hktm/lesson_contents/templates/lesson_contents/preview_container.html
@@ -5,5 +5,7 @@
     <link rel="stylesheet" href="/static/questions.css"/>
   </head>
   <body>
+    <div class="preview_resize">
     {{ lesson_content.render()|safe }}
+    </div>
   </body>
