--- a/hktm/static/questions.css
+++ b/hktm/static/questions.css
@@ -33,6 +33,16 @@
   --colwidth: 70px;
   font-family: Kyokasho;
 }
+
+.preview_resize{
+  display: block;
+  -webkit-transform: scale(0.8);
+  -moz-transform: scale(0.8);
+  -o-transform: scale(0.8);
+  -ms-transform: scale(0.8);
+  margin-left: -40px;
+  margin-top: -30px;
+}
 .preview .hiragana{
   padding-left: 7px;
   Xletter-spacing: 0.3em;
