added the ability to assign grades to lessons

--- a/hktm/lessons/templates/lessons/edit_lesson.html
+++ b/hktm/lessons/templates/lessons/edit_lesson.html
@@ -43,6 +43,8 @@ $('#myModal').on('shown.bs.modal', function () {
           {{form.hidden_tag()}}
           <div class="form-group col-xl">
             {{form.name.label}} {{form.name(class='form-control')}}
+            {{form.grade.label}} {{form.grade(class='form-control')}}
+
           </div>
         </div>
         <div class="row">
