--- a/hktm/lessons/templates/lessons/add_lesson.html
+++ b/hktm/lessons/templates/lessons/add_lesson.html
@@ -13,6 +13,8 @@
         <div class="form-group">
           {{form.name.label}}
           {{form.name(class='form-control')}}
+          {{form.grade.label}}
+          {{form.grade(class='form-control')}}
         </div>
 
       <div class="form-group">
