--- a/hktm/lessons/templates/lessons/add_lesson.html
+++ b/hktm/lessons/templates/lessons/add_lesson.html
@@ -13,6 +13,13 @@
         <div class="form-group">
           {{form.name.label}}
           {{form.name(class='form-control')}}
+          {% if form.name.errors %}
+            <ul class="errors">
+              {% for error in form.name.errors %}
+                <li class="alert alert-danger" style="margin: 3px">{{ error }}</li>
+              {% endfor %}
+            </ul>
+          {% endif %}          
           {{form.grade.label}}
           {{form.grade(class='form-control')}}
         </div>
